# kaggle_nvida

./: .gitignore  README.md  pyproject.toml
configs/eval/: slices_default.json
configs/lora/: default_stage1.json
configs/mixtures/: stage1_default.json
configs/sweeps/: stage1_quick_grid.json
configs/tool_stack/: curator_default.json  datadesigner_default.json  nemo_rl_default.json
configs/training/: stage1.json  stage2.json  stage3.json
docs/: architecture.md  data_spec.md  evaluation.md  export.md  ingestion.md  operations.md  synthesis.md  tool_stack.md  training_launchers.md  training_plan.md
examples/: README.md  profile_results.jsonl  run_summary.json
examples/bootstrap_math/: README.md
examples/bootstrap_mixed/: README.md
examples/importer/: mapping_instruction.json  raw_instruction.jsonl
scripts/: launch_stage1.py  launch_stage2.py  launch_stage3.py
src/kaggle_nvida/: __init__.py  cli.py  datasets.py  io_utils.py  manifest.py  pipeline.py  schemas.py
src/kaggle_nvida/curation/: __init__.py  filters.py  mixture.py  profiling.py
src/kaggle_nvida/evaluation/: __init__.py  scoring.py  slices.py
src/kaggle_nvida/exporters/: __init__.py  training_export.py
src/kaggle_nvida/importers/: __init__.py  jsonl_importer.py
src/kaggle_nvida/integrations/: __init__.py  tool_stack.py
src/kaggle_nvida/synthesis/: __init__.py  document_generator.py  (+3 more)
tests/: test_bootstrap.py  test_cli.py  test_eval_slices.py  test_exporter.py  test_importer.py  test_mixed_bootstrap.py  test_tool_stack.py  test_tracker.py  test_training_launchers.py
(+4 files in other folders)
