[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-nvida"
version = "0.1.0"
description = "Utilities for the NVIDIA Nemotron reasoning challenge workflow."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DanceinDmajor" }
]
dependencies = []

[project.scripts]
kaggle-nvida = "kaggle_nvida.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

